added darkmode feature

--- a/app.html
+++ b/app.html
@@ -10,6 +10,16 @@
 
 </head>
 <body>
+
+    <div class="toggle-container">
+        <input type="checkbox" id="dark-mode-toggle">
+        <label for="dark-mode-toggle" class="toggle-label"></label>
+    </div>
+  
+<div id="login"><button id="loginn"><a href="user.html" id="log">Login</a></button>
+</div>
+
+
     <div class="page1">
        <div class="search">
         <input type="text" placeholder="Enter city name" spellcheck="false">
